...
  @override
  Future<bool> activate() async => await _session?.setActive(true) ?? false;
  @override
  Future<void> load(String reference, File? file, String title) async {
    final tag = MediaItem(
      id: reference,
      album: 'Hac ve Umre Sesli Rehber',
      title: title,
    );
    if (file == null) {
      await _audio.setAsset(reference, tag: tag);
    } else {
      await _audio.setAudioSource(AudioSource.uri(file.uri, tag: tag));
...
